--- a/chatapp-frontend/src/index.css
+++ b/chatapp-frontend/src/index.css
@@ -11,3 +11,15 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+::-webkit-scrollbar{
+width:5px}
+
+::-webkit-scrollbar-thumb{
+background-color:#3e3c61;
+}
+
+.topbarContainer{
+background-color:#3e3c61 !important;
+}
